<resources>
    <!-- App name -->
    <string name="app_name">Robots</string>

    <!-- Button RESET -->
    <string name="btn_reset">Reset</string>

    <!-- Button TELETRANSPORTING -->
    <string name="btn_tel">T</string>

    <!-- Buttons ARROWS -->
    <string name="btn_up_left">&#x2196;</string>
    <string name="btn_up">&#x2191;</string>
    <string name="btn_up_right">&#x2197;</string>
    <string name="btn_left">&#x2190;</string>
    <string name="btn_right">&#x2192;</string>
    <string name="btn_down_left">&#x2199;</string>
    <string name="btn_down">&#x2193;</string>
    <string name="btn_down_right">&#x2198;</string>

    <!-- TextView TITLE -->
    <string name="title_you_are_dead">You are dead!</string>
    <string name="title_you_win">You win!</string>

    <!-- About of dialog -->
    <string name="about_title">About of</string>
    <string name="about_text">Robots\nv1.10 (05 Nov 2015)\n
        \n&#169; 2015 Miguel Garcia\nwww.floppysoftware.es
        \nmiguelvisgarcia@gmail.com</string>

    <!-- Assorted buttons -->
    <string name="btn_ok">OK</string>

    <!-- Action bar items -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About of Robots</string>

    <!-- Other -->
    <string name="msg_not_implemented">Not implemented yet</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
